[package]
name = "srisum"
version = "2.0.0"
description = "Compute and check subresource integrity digests"
authors = ["Kat Marchán <kzm@zkat.tech>"]
repository = "https://github.com/zkat/srisum-rs"
homepage = "https://github.com/zkat/srisum-rs"
license-file = "LICENSE.md"
readme = "README.md"
edition = "2018"

[dependencies]
ssri = "5.0.0"
clap = "2.33.0"
failure = "0.1.5"
