[package]
name = "srisum"
version = "4.0.0"
description = "Compute and check subresource integrity digests"
authors = ["Kat Marchán <kzm@zkat.tech>"]
repository = "https://github.com/zkat/srisum-rs"
homepage = "https://github.com/zkat/srisum-rs"
license-file = "LICENSE.md"
readme = "README.md"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
ssri = "7.0.0"
clap = { version = "3.1.18", features = ["derive"] }
miette = { version = "4.7.1", features = ["fancy"] }
thiserror = "1.0.31"

